cmake_minimum_required(VERSION 3.10)
project(StaticAnalysisTests LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(test1 test1.cpp)
add_executable(test2 test2.cpp)
add_executable(test3 test3.cpp)
add_executable(test4 test4.cpp)
add_executable(test5 test5.cpp)
add_executable(test6 test6.cpp)
add_executable(test7 test7.cpp)
add_executable(test8 test8.cpp)
add_executable(test9 test9.cpp)
add_executable(test10 test10.cpp)
add_executable(test11 test11.cpp)
add_executable(test12 test12.cpp)


